# nanolog-rs

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md  TODO.md
benches/: benchmarks.rs  logger_benchmark.rs
examples/: advanced_usage.rs  basic_usage.rs  builder_example.rs  macros_advanced_example.rs  macros_example.rs  macros_performance_example.rs  modern_builder_example.rs  safe_shutdown.rs
src/: buffer.rs  builder.rs  error.rs  format.rs  level.rs  lib.rs  logger.rs  macros.rs  record.rs  sink.rs
tests/: builder_integration_test.rs  macro_memory_sink_test.rs
