[package]
name = "nanolog-rs"
version = "0.2.1"
edition = "2024"
description = "High performance asynchronous logging library for high-frequency trading systems"
authors = ["huangbogeng <huangbogeng@outlook.com>"]
license = "MIT"
homepage = "https://github.com/huangbogeng/nanolog-rs"
repository = "https://github.com/huangbogeng/nanolog-rs"
documentation = "https://docs.rs/nanolog-rs"
readme = "README.md"
keywords = ["logging", "async", "high-performance"]
categories = ["asynchronous", "development-tools::debugging"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

# Clippy configuration
[lints.clippy]
# Warn on commonly undesirable behaviors
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }

# Specific lints to deny
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[dependencies]
crossbeam-queue = "0.3.12"
crossbeam-epoch = "0.9.18"
lazy_static = "1.5.0"
thiserror = "2.0.17"
log = { version = "0.4.29", features = ["std"] }
disruptor = "3.7.0"
time = "0.3.44"
chrono = { version = "0.4.42", default-features = false, features = ["alloc"] }
ctrlc = "3.4.4"

[dev-dependencies]
criterion = "0.8.0"

[[bench]]
name = "logger_benchmark"
harness = false

[[bench]]
name = "benchmarks"
harness = false
